--- a/.github/workflows/Build_X86_64_2305.yml
+++ b/.github/workflows/Build_X86_64_2305.yml
@@ -1,10 +1,10 @@
 #===============================================
-# Description: X86_64-op23
+# Description: X86_64-2305
 # Lisence: MIT
 # By：Jejz
 #===============================================
 
-name: Build_x86_64-op23
+name: Build_x86_64-2305
 
 on:
   repository_dispatch:
@@ -36,11 +36,11 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds_config/lede23.feeds.conf.default
-  CONFIG_FILE: config/lede_config/x86-op23.config
+  FEEDS_CONF: feeds_config/lede2305.feeds.conf.default
+  CONFIG_FILE: config/lede_config/x86-2305.config
   CONFIGS: config/lede_config
   DIY_P1_SH: diy_script/lede_diy/x86/diy-part1.sh
-  DIY_P2_SH: diy_script/lede_diy/x86/diy23-part2.sh
+  DIY_P2_SH: diy_script/lede_diy/x86/diy2305-part2.sh
   CLASH_KERNEL: amd64
   UPLOAD_BIN_DIR: false
   UPLOAD_CONFIG: true
@@ -56,7 +56,7 @@ jobs:
     env:
       REPO_URL_Lede: https://github.com/coolsnowwolf/lede
       REPO_BRANCH_Lede: master
-      REPO_PATH_Lede : "Lede_x86-op23"
+      REPO_PATH_Lede : "Lede_x86-2305"
     outputs:
       output: ${{ steps.outputunifreq.outputs.unifreq }}
     steps:
@@ -65,20 +65,20 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL_Lede -b $REPO_BRANCH_Lede $REPO_PATH_Lede
         cd $REPO_PATH_Lede
-        echo "commitHash_x86-op23=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+        echo "commitHash_x86-2305=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
         cd
 
     - name: Show Commit Head and Combination Heads
       id: combHeader
       run: |
-        echo "commitHash_x86-op23: ${{ steps.getHash.outputs.commitHash_x86-op23 }}"
+        echo "commitHash_x86-2305: ${{ steps.getHash.outputs.commitHash_x86-2305 }}"
 
     - name: Compare Commit Hash
       id: cacheHash
       uses: actions/cache@main
       with:
-        path: .commitHash_x86-op23
-        key: HEAD-${{ steps.getHash.outputs.commitHash_x86-op23 }}
+        path: .commitHash_x86-2305
+        key: HEAD-${{ steps.getHash.outputs.commitHash_x86-2305 }}
 
     - name: Set output for next job
       id: outputunifreq
@@ -89,7 +89,7 @@ jobs:
     - name: Save New Commit Hash
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
-        echo ${{ steps.getHash.outputs.commitHash_x86-op23 }} | tee .commitHash_x86-op23
+        echo ${{ steps.getHash.outputs.commitHash_x86-2305 }} | tee .commitHash_x86-2305
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   job_init: 
     runs-on: ubuntu-latest
@@ -133,7 +133,7 @@ jobs:
           $GITHUB_WORKSPACE/$DIY_P2_SH
           
           cd ..
-          platforms=(x86-op23)
+          platforms=(x86-2305)
           for i in "${platforms[@]}"; do
             [ -e $CONFIGS/$i.config ] && cp -r $CONFIGS/$i.config openwrt/.config
             cd openwrt
@@ -405,12 +405,12 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
         allowUpdates: true
-        tag: ${{ env.TAG }}-op23_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is LEDE-op23 Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/mihomo**
           ### 📒 固件信息
           - 💻 平台架构: ${{ env.FILE_NAME }}
@@ -446,7 +446,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -456,15 +456,15 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
+        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -474,7 +474,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_515:
     needs: [Checka,job_init]
@@ -712,12 +712,12 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
         allowUpdates: true
-        tag: ${{ env.TAG }}-op23_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is LEDE-op23 Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/mihomo**
           ### 📒 固件信息
           - 💻 平台架构: ${{ env.FILE_NAME }}
@@ -753,7 +753,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -763,15 +763,15 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
+        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -781,7 +781,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_61:
     needs: [Checka,job_init]
@@ -1021,13 +1021,13 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}-op23_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is LEDE-op23 Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/mihomo**
           ### 📒 固件信息
           - 💻 平台架构: ${{ env.FILE_NAME }}
@@ -1063,7 +1063,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1073,15 +1073,15 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
+        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1091,7 +1091,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_66:
     needs: [Checka,job_init]
@@ -1329,13 +1329,13 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}-op23_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is LEDE-op23 Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/mihomo**
           ### 📒 固件信息
           - 💻 平台架构: ${{ env.FILE_NAME }}
@@ -1371,7 +1371,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1381,15 +1381,15 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
+        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1399,7 +1399,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-op23_${{ env.KERNEL }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}-2305_${{ env.KERNEL }}
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Cleaning:
     if: ${{ always() }}
