--- a/.github/workflows/Build_X86_64_2305.yml
+++ b/.github/workflows/Build_X86_64_2305.yml
@@ -1520,6 +1520,10 @@ jobs:
         $GITHUB_WORKSPACE/diy_script/preset-JejzWrt.sh
         $GITHUB_WORKSPACE/diy_script/preset-clash-core.sh $CLASH_KERNEL
         $GITHUB_WORKSPACE/diy_script/preset-adguard-core.sh $CLASH_KERNEL
+
+       sed -i 's/CONFIG_PACKAGE_kmod-ice=y/# CONFIG_PACKAGE_kmod-ice is not set/g' .config
+
+        sed -i 's/CONFIG_PACKAGE_kmod-usb-net-asix=y/# CONFIG_PACKAGE_kmod-usb-net-asix is not set/g' .config
         
         sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_6_12=y/g' .config
 
