--- a/config/lede_config/armv8.config
+++ b/config/lede_config/armv8.config
@@ -3235,20 +3235,15 @@ CONFIG_PACKAGE_luci-lib-fs=y
 #
 # Node.js
 #
-CONFIG_PACKAGE_node=y
+# CONFIG_PACKAGE_node is not set
 
 #
 # Configuration
 #
 # CONFIG_NODEJS_12 is not set
-CONFIG_NODEJS_14=y
-# CONFIG_NODEJS_16 is not set
+# CONFIG_NODEJS_14 is not set
+CONFIG_NODEJS_16=y
 # CONFIG_NODEJS_18 is not set
-# CONFIG_NODEJS_20 is not set
-# CONFIG_NODEJS_22 is not set
-CONFIG_NODEJS_ICU_NONE=y
-# CONFIG_NODEJS_ICU_SMALL is not set
-# CONFIG_NODEJS_ICU_SYSTEM is not set
 # end of Configuration
 
 # CONFIG_PACKAGE_node-arduino-firmata is not set
