--- a/.github/workflows/Build-lede-toolchain.yml
+++ b/.github/workflows/Build-lede-toolchain.yml
@@ -24,7 +24,7 @@ jobs:
         branch: [master]
 
     env:
-      REPO_URL: https://github.com/${{ matrix.repo }}/${{ matrix.repo }}
+      REPO_URL: https://github.com/coolsnowwolf/${{ matrix.repo }}
       REPO_BRANCH: ${{ matrix.branch }}
 
     steps:
@@ -66,7 +66,7 @@ jobs:
         target: [x86_64, rockchip_armv8, armsr_armv8]
 
     env:
-      REPO_URL: https://github.com/${{ matrix.repo }}/${{ matrix.repo }}
+      REPO_URL: https://github.com/coolsnowwolf/${{ matrix.repo }}
       REPO_BRANCH: ${{ matrix.branch }}
       TARGET_DEVICE: ${{ matrix.target }}
       TOOLCHAIN_TAG: toolchain-cache
