--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -252,8 +252,9 @@ jobs:
       id: package
       run: |
         cd openwrt
-        make defconfig
-        make download -j8
+        # make defconfig
+        # make download -j$(nproc)
+        make package/download -j$(nproc)
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
