--- a/.github/workflows/Build_X86_64[openwrt].yml
+++ b/.github/workflows/Build_X86_64[openwrt].yml
@@ -42,7 +42,7 @@ env:
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
   FILE_NAME: x86_64
-  PRODUCT_NAME: x86_64
+  TOOLCHAIN: ${{ github.event.inputs.toolchain }}
 
 jobs:
   Checka:
