--- a/.github/workflows/Build_X86_64_2305.yml
+++ b/.github/workflows/Build_X86_64_2305.yml
@@ -32,8 +32,9 @@ on:
         default: 'false'
       ssh:
         description: 'SSH connection to Actions'
-        required: false
+        required: true
         default: 'false'
+        type: boolean
       toolchain:
         description: '使用toolchain缓存'
         required: false
@@ -341,10 +342,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -422,7 +423,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
@@ -463,7 +464,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -479,9 +480,9 @@ jobs:
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
+        title: "[LEDE-2305]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -655,10 +656,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -736,7 +737,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
@@ -777,7 +778,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -793,9 +794,9 @@ jobs:
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
+        title: "[LEDE-2305]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -971,10 +972,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -1052,7 +1053,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
@@ -1094,7 +1095,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1110,9 +1111,9 @@ jobs:
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
+        title: "[LEDE-2305]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1286,10 +1287,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -1367,7 +1368,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
@@ -1409,7 +1410,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1425,9 +1426,9 @@ jobs:
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
+        title: "[LEDE-2305]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1605,10 +1606,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -1686,7 +1687,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305] 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
@@ -1728,7 +1729,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -1744,9 +1745,9 @@ jobs:
       uses: xhnmt/pushplus-action@main
       with:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
-        title: "${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成"
+        title: "[LEDE-2305]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[2305]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[LEDE-2305]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
