--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -36,8 +36,9 @@ on:
         default: 'false'
       ssh:
         description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+        required: true
+        default: false
+        type: boolean'
       toolchain:
         description: '使用toolchain缓存'
         required: false
@@ -62,6 +63,7 @@ env:
   TZ: Asia/Shanghai
   FILE_NAME: x86_64
   PRODUCT_NAME: x86_64
+  TOOLCHAIN: ${{ github.event.inputs.toolchain }}
 
 jobs:
   Checka:
@@ -344,10 +346,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -657,10 +659,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -970,10 +972,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -1285,10 +1287,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -1599,10 +1601,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
@@ -1917,10 +1919,10 @@ jobs:
         cd openwrt
         make defconfig
         if [[ "${CANCEL_TOOLCHAIN}" == "true" ]]; then
-           echo -e "当前正常编译"
+           echo -e "\e[1;31m当前正常编译...\e[0m"
            make download -j$(nproc)
         else
-           echo -e "当前调用toolchain缓存文件"
+           echo -e "\e[1;31m当前使用toolchain缓存文件...\e[0m"
            make package/download -j$(nproc)
         fi
         find dl -size -1024c -exec ls -l {} \;
